changed fixed background on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,7 +51,7 @@ nav .portfolio {
     padding:0px;
 }
 #hero {
-/*    background-attachment: fixed;*/
+    background-attachment: fixed;
     background-image: url(../Images/Profile_hero_dark.jpg);
     background-size: cover;
     height: 100vh;
@@ -233,6 +233,9 @@ nav .portfolio {
 
 
 @media screen and (max-width: 636px) { /* these are the settings for when the viewport is a much smaller size */
+    #hero {
+        background-attachment: scroll;
+    }
     .jumbotron .display-4 {
         font-size: 5rem;
         line-height: 3.5rem;
